--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@eslint/config-array": "^0.19.1",
+    "@eslint/object-schema": "^2.1.5",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "eslint": "^8.56.0",
+    "eslint": "^9.18.0",
     "eslint-config-next": "14.1.0",
+    "glob": "^11.0.1",
+    "rimraf": "^6.0.1",
     "typescript": "^5.3.3"
   },
   "overrides": {
