--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.17",
     "next": "14.1.0",
+    "nodemailer": "^6.9.16",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
