--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,9 @@ applications:
       phases:
         preBuild:
           commands:
+            - nvm install 20
+            - nvm use 20
+            - node -v
             - yarn install
         build:
           commands:
