Update build configuration for AWS Amplify and clean up dependencies

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,7 +12,7 @@ applications:
           commands:
             - yarn run build
       artifacts:
-        baseDirectory: out
+        baseDirectory: .next
         files:
           - '**/*'
       cache:
