--- a/package.json
+++ b/package.json
@@ -23,23 +23,15 @@
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@eslint/config-array": "^0.19.1",
-    "@eslint/object-schema": "^2.1.5",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "eslint": "^9.18.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "glob": "^11.0.1",
-    "rimraf": "^6.0.1",
     "typescript": "^5.3.3"
-  },
-  "overrides": {
-    "glob": "^10.3.10",
-    "inflight": "^2.0.0",
-    "rimraf": "^5.0.5"
   }
 }
