--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.17",
     "next": "14.1.0",
@@ -24,6 +25,7 @@
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.3",
     "tailwindcss": "^3.4.1",
     "uuid": "^9.0.1"
   },
